Timeline format is ok
